<resources>
    <!-- for general purpose -->
    <!-- For standat country date -->
    <string name="language">english</string>

    <!-- Commands -->
    <string name="toggle_open">Open</string>
    <string name="toggle_close">Close</string>

    <!-- For set activity identification -->
    <string name="kind_walking">walking</string>
    <string name="kind_running">running</string>
    <string name="kind_swimming">swimming</string>
    <string name="kind_cycling">cycling</string>

    <!-- Buttons -->
    <string name="btn_register">REGISTER</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_delete">DELETE</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">CANCEL</string>

    <!-- res/layout/activity_splash.xml -->
    <string name="splash_app_title">IFitness</string>
    <string name="splash_subtitle">Dev fitness</string>
    <string name="splash_organization">Federal Institute of São Paulo - Brazil</string>

    <!-- res/layout/activity_main.xml -->
    <string name="app_name">IFitness</string>
    <string name="main_recent_activities">Recent Activities</string>

    <!-- res/layout/activity_sports.xml -->
    <string name="sports_title">Activities</string>
    <string name="sports_walking">Walking</string>
    <string name="sports_running">Running</string>
    <string name="sports_swimming">Swimming</string>
    <string name="sports_cycling">Cycling</string>
    <string name="sports_empty">Empty</string>

    <!-- res/layout/activity_sports_selection.xml -->
    <string name="sports_selection_title">Activities</string>
    <string name="sports_selection_walking">Walking</string>
    <string name="sports_selection_running">Running</string>
    <string name="sports_selection_swimming">Swimming</string>
    <string name="sports_selection_cycling">Cycling</string>
    <string name="sports_selection_empty">Empty</string>

    <!-- res/menu/menu_drawer.xml -->
    <string name="menu_drawer_home">Home</string>
    <string name="menu_drawer_user">User</string>
    <string name="menu_drawer_Profile">Profile</string>
    <string name="menu_drawer_activities">Activities</string>
    <string name="menu_drawer_list">List Activities</string>
    <string name="menu_drawer_leaderboard">Leaderboard</string>
    <string name="menu_drawer_badges">Badges</string>
    <string name="menu_drawer_logout">Logout</string>

    <!-- res/layout/menu_header_layout.xml -->
    <string name="menu_header_image">Profile image</string>
    <string name="menu_header_login">Login</string>

    <!-- res/layout/activity_user_login.xml -->
    <string name="user_login_title">Login</string>
    <string name="user_login_email">E-mail</string>
    <string name="user_login_password">Password</string>
    <string name="user_login_forgot_password">Forgot your password</string>
    <string name="user_login_txt_login_not_account">Don’t have an account?</string>

    <!-- app/src/main/java/br/edu/ifsp/dmo/ifitness/UserLoginActivity.java -->
    <string name="user_login_wrong_values">E-mail/Password wrong!</string>
    <string name="user_login_reset_password">Reset password</string>
    <string name="user_login_check_email">Please, check your e-mail to change your password.</string>
    <string name="user_login_credentials">Please enter your credentials.</string>
    <string name="user_login_success">Login successful.</string>
    <string name="user_login_valid_credentials">Please enter valid user credentials.</string>

    <!-- res/layout/activity_user_register.xml -->
    <string name="user_register_title">Register</string>
    <string name="user_register_name">Name</string>
    <string name="user_register_email">E-mail</string>
    <string name="user_register_password">Password</string>
    <string name="user_register_confirm_password">Confirm password</string>
    <string name="user_registry_check_password">Please check both having same password.</string>
    <string name="user_registry_credentials">Please enter your credentials.</string>
    <string name="user_register_success">User registered.</string>
    <string name="user_register_fail">Fail to register user.</string>

    <!-- app/src/main/java/br/edu/ifsp/dmo/ifitness/UserRegisterActivity.java -->
    <string name="user_register_error_msg_password">Password must be 6 or more digits.</string>
    <string name="user_register_name_empty">The field name cannot be empty.</string>
    <string name="user_register_password_empty">The field password cannot be empty.</string>
    <string name="user_register_email_empty">The field e-mail cannot be empty.</string>
    <string name="sport_register_fill_name">Fill the field name.</string>
    <string name="sport_register_fill_surname">Fill the field surname.</string>
    <string name="sport_register_fill_email">Fill the field  e-mail.</string>


    <!-- res/layout/activity_user_profile.xml -->
    <string name="user_profile_title">Profile</string>
    <string name="user_profile_image">Profile image</string>
    <string name="user_profile_name">Name</string>
    <string name="user_profile_surname">Surname</string>
    <string name="user_profile_email">E-mail</string>
    <string name="user_profile_birthday">Birthday date</string>
    <string name="user_profile_select_date">Select date</string>
    <string name="user_profile_phone">Phone</string>
    <!-- NOT USED
        <string name="user_profile_address">Adress</string>
        <string name="user_profile_street">Street</string>
        <string name="user_profile_number">Number</string>
        <string name="user_profile_complement">Complement</string>
        <string name="user_profile_district">District</string>
        <string name="user_profile_city">City</string>
        <string name="user_profile_zip_code">Zip code</string>
    -->
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <!-- NOT USED
        <string-array name="uf">
            <item>Acre (AC)</item>
            <item>Alagoas (AL)</item>
            <item>Amapá (AP)</item>
            <item>Amazonas (AM)</item>
            <item>Bahia (BA)</item>
            <item>Ceará (CE)</item>
            <item>Distrito Federal (DF)</item>
            <item>Espírito Santo (ES)</item>
            <item>Goiás (GO)</item>
            <item>Maranhão (MA)</item>
            <item>Mato Grosso (MT)</item>
            <item>Mato Grosso do Sul (MS)</item>
            <item>Minas Gerais (MG)</item>
            <item>Pará (PA)</item>
            <item>Paraíba (PB)</item>
            <item>Paraná (PR)</item>
            <item>Pernambuco (PE)</item>
            <item>Piauí (PI)</item>
            <item>Rio de Janeiro (RJ)</item>
            <item>Rio Grande do Norte (RN)</item>
            <item>Rio Grande do Sul (RS)</item>
            <item>Rondônia (RO)</item>
            <item>Roraima (RR)</item>
            <item>Santa Catarina (SC)</item>
            <item>São Paulo (SP)</item>
            <item>Sergipe (SE)</item>
            <item>Tocantins (TO)</item>
        </string-array>
    -->

    <!-- app/src/main/java/br/edu/ifsp/dmo/ifitness/UserProfileActivity.java -->
    <string name="user_profile_success">Data update with success.</string>
    <string name="user_profile_fill_name">Fill the field name.</string>
    <string name="user_profile_fill_surname">Fill the field surname.</string>
    <string name="user_profile_fill_email">Fill the field e-mail.</string>
    <string name="user_profile_fill_phone">Fill the field phone.</string>
    <string name="user_profile_fill_birthday">Select your birthday</string>

    <!-- res/layout/activity_sport_register.xml -->
    <string name="sport_register_title">Activity register</string>
    <string name="sport_register_calendar_description">Calendar</string>
    <string name="sport_register_select_date">Select date</string>
    <string name="sport_register_timer_description">Timer</string>
    <string name="sport_register_hour">Hour</string>
    <string name="sport_register_minute">Minute</string>
    <string name="sport_register_distance_description">Distance</string>
    <string name="sport_register_distance">Distance</string>
    <string name="sport_register_meters">Meters</string>
    <string name="sport_register_date_pattern">MM/dd/yyyy</string>
    <string name="sport_register_success">Activity saved with success.</string>
    <string-array name="distance">
        <item>km</item>
        <item>m</item>
    </string-array>

    <!-- res/layout/activity_sport_edit.xml -->
    <string name="sport_edit_title">Activity edit</string>
    <string name="sport_edit_calendar_description">Calendar</string>
    <string name="sport_edit_select_date">Select date</string>
    <string name="sport_edit_timer_description">Timer</string>
    <string name="sport_edit_hour">Hour</string>
    <string name="sport_edit_minute">Minute</string>
    <string name="sport_edit_distance_description">Distance</string>
    <string name="sport_edit_distance">Distance</string>
    <string name="sport_edit_meters">Meters</string>
    <string name="sport_edit_success">Activity actualized with success.</string>
    <string name="sport_edit_delete">Activity deleted with success.</string>

    <!-- res/layout/activity_badges.xml -->
    <string name="badges_title">Badges</string>
    <string name="badges_no_badges">No badges gained.</string>
    <string name="badge_15">You exercised for 15 km</string>
    <string name="badge_15_description">Beginner badge</string>
    <string name="badge_25">You exercised for 25 km</string>
    <string name="badge_25_description">Bronze badge</string>
    <string name="badge_50">You exercised for 50 km</string>
    <string name="badge_50_description">Silver badge</string>
    <string name="badge_100">You exercised for 100 km</string>
    <string name="badge_100_description">Gold badge</string>
    <string name="badge_150">You exercised for 150 km</string>
    <string name="badge_150_description">Platinum badge</string>
    <string name="badges_your_points">Your points:\u0020</string>
    <string name="badges_km">\u0020km.</string>

    <!-- res/layout/activity_leaderboard.xml -->
    <string name="leaderboard_title">Leaderboard</string>

    <!-- app/src/main/java/br/edu/ifsp/dmo/ifitness/RepositoryActivity.java -->
    <string name="user_repository_user">User\u0020</string>
    <string name="user_repository_success">\u0020registered with success.</string>

    <!-- res/layout/dialog_reset_password.xml -->
    <string name="dialog_reset_email">E-mail</string>

    <!-- res/layout/item_activity.xml -->

    <!-- app/src/main/java/br/edu/ifsp/dmo/ifitness/ActivityAdapter.java -->
    <string name="activity_adapter_you_did">"You did\u0020"</string>
    <string name="activity_adapter_km_in">"\u0020km in\u0020"</string>
    <string name="activity_adapter_hours">\u0020hours.</string>
    <string name="sport_list_title">Activity list</string>

    <!-- res/layout/activity_leaderboard.xml -->
    <string name="activity_leaderboard_position">Position</string>
    <string name="activity_leaderboard_user">User</string>
    <string name="activity_leaderboard_points">Points (km)</string>
</resources>