<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                layout="@layout/menu_toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:orientation="vertical"
                tools:context=".BadgesActivity">

                <LinearLayout
                    android:id="@+id/badges_points"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/badges_txt_points"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:gravity="center_vertical"
                        android:text="@string/badges_your_points"
                        android:textAppearance="@android:style/TextAppearance.Large"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/no_badges"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_below="@id/badges_points"
                    android:layout_margin="8dp"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/badges_no_badges"
                        android:textAppearance="@android:style/TextAppearance.Large"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/badge_beginner"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_below="@id/badges_points"
                    android:layout_margin="8dp"
                    android:orientation="horizontal"
                    android:visibility="invisible">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="120dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/badge_15_description"
                        android:scaleType="centerCrop"
                        android:src="@drawable/beginner_medal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/badge_15"
                        android:textAppearance="@android:style/TextAppearance.Medium" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/badge_bronze"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_below="@id/badge_beginner"
                    android:layout_margin="8dp"
                    android:orientation="horizontal"
                    android:visibility="invisible">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="120dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/badge_25_description"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bronze_medal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/badge_25"
                        android:textAppearance="@android:style/TextAppearance.Medium" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/badge_silver"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_below="@id/badge_bronze"
                    android:layout_margin="8dp"
                    android:orientation="horizontal"
                    android:visibility="invisible">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="120dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/badge_50_description"
                        android:scaleType="centerCrop"
                        android:src="@drawable/silver_medal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/badge_50"
                        android:textAppearance="@android:style/TextAppearance.Medium" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/badge_gold"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_below="@id/badge_silver"
                    android:layout_margin="8dp"
                    android:orientation="horizontal"
                    android:visibility="invisible">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="120dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/badge_100_description"
                        android:scaleType="centerCrop"
                        android:src="@drawable/gold_medal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/badge_100"
                        android:textAppearance="@android:style/TextAppearance.Medium" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/badge_platinum"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_below="@id/badge_gold"
                    android:layout_margin="8dp"
                    android:orientation="horizontal"
                    android:visibility="invisible">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="120dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/badge_150_description"
                        android:scaleType="centerCrop"
                        android:src="@drawable/platinum_medal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/badge_150"
                        android:textAppearance="@android:style/TextAppearance.Medium" />
                </LinearLayout>


            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <include layout="@layout/menu_navigation_view" />

</androidx.drawerlayout.widget.DrawerLayout>